[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/textures/bottle1_stage2.png" type="Texture" id=1]
[ext_resource path="res://Assets/textures/stain.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Minigames/SodaShake.gd" type="Script" id=3]
[ext_resource path="res://Assets/audio/bottleshake.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/textures/bottle1_stage3.png" type="Texture" id=5]
[ext_resource path="res://Assets/textures/bottle1_stage4.png" type="Texture" id=6]
[ext_resource path="res://Assets/textures/bottle1_stage1.png" type="Texture" id=7]
[ext_resource path="res://Assets/audio/bottleexploding.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "explosion",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "shaking",
"speed": 8.0
} ]

[node name="SodaShake" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.952941, 0.952941, 0.952941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Soda" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Soda"]
position = Vector2( 288.938, 626.732 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
margin_right = 248.0
margin_bottom = 175.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShakingBottleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="BottleExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
